--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,25 +26,8 @@ jobs:
       - name: Install Development Python dependencies
         run: python3 -mpip install -r dev-requirements.txt
 
-      - name: Checkout Tamer UPF
-        uses: actions/checkout@v2
-        with:
-          repository: aiplan4eu/tamer-upf
-          path: tamer-upf
-          ref: "29dfa4b3c43ac6da0b97ca89e94450fce19b5681"
-
-      - name: Install Tamer UPF
-        run: pip install ./tamer-upf
-
-      - name: Checkout Pyperplan UPF
-        uses: actions/checkout@v2
-        with:
-          repository: aiplan4eu/pyperplan-upf
-          path: pyperplan-upf
-          ref: "ddaf0cee57343638a8af0f1454e2a48dc5aa210f"
-
-      - name: Install Pyperplan UPF
-        run: pip install ./pyperplan-upf
+      - name: Install Pyperplan-upf and Tamer-upf
+        run: pip install -e .[devs]
 
       - name: Download ENHSP
         run: |
